# skvconf

./: .clang-format  COPYING  Doxyfile  README.md  meson.build
include/: skvconf.h  skvconf_types.h
src/: lexer.l  meson.build  parser.y  skvconf.c  skvconf_types.c
test/: basic.c  find_element.c  find_group.c  find_nonexistent_element.c  meson.build  should_fail.c  should_fail.txt  string.c  test.txt
